<resources>


    <string name="info_title">Info:</string>
    <string name="info_message">Add the amount in the box, and then select which two nations you want to convert the currency too!</string>
    <string name="ok_button">OK!</string>


    <string name="app_name">Final Project</string>


    <string-array name="currencies">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>JPY</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>SEK</item>
        <item>NZD</item>
    </string-array>
    <string name="Amount">Amount</string>
    <string name="Convert">Convert</string>
    <string name="Reset">Reset</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="CC">Currency Converter</string>
    <string name="Results">Results</string>
    <string name="heightText">Height</string>
    <string name="heightHint">E.g. 100</string>
    <string name="widthText">Width</string>
    <string name="widthHint">E.g. 100</string>
    <string name="trivia_title">Trivia</string>
    <string name="trivia_question_number_display">"Question "</string>
    <string name="trivia_question_text_placeholder" translatable="false">Question Text</string>
    <string name="trivia_answer_text_placeholder" translatable="false">Answer Text Here</string>
    <string name="trivia_category_header">Category</string>
    <string name="trivia_difficulty_header">Difficulty</string>
    <string name="trivia_select_button_text">Select</string>
    <string name="trivia_player_name_placeholder" translatable="false">Player Name</string>
    <string name="trivia_player_score_placeholder" translatable="false">x/10</string>
    <string name="trivia_top_scores_header">Top Scores in your category and difficulty:</string>
    <string name="trivia_name_input_label">Your Name</string>
    <string name="trivia_submit_button_text">Submit</string>
    <string name="trivia_new_game_button_text">New Game</string>

    <string-array name="trivia_categories_array">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="trivia_difficulties_array">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!--AirportDisplayBoardStrings Starts-->
    <!-- General -->
    <string name="AirportDisplayBoard.Yes">Yes</string>
    <string name="AirportDisplayBoard.No">No</string>
    <string name="AirportDisplayBoard.Dismiss">Dismiss</string>
    <string name="AirportDisplayBoard.Undo">Undo</string>
    <string name="AirportDisplayBoard.Confirm">Confirm?</string>
    <string name="AirportDisplayBoard.Btn.Help">Help</string>

    <!-- App Text -->
    <string name="AirportDisplayBoard.Text.TBD">TBD</string>

    <!-- App Component -->
    <string name="AirportDisplayBoard.Btn.My_List">My List</string>
    <string name="AirportDisplayBoard.Btn.All_Flight">All Flights</string>
    <string name="AirportDisplayBoard.Label.Airport">Airport : </string>
    <string name="AirportDisplayBoard.Hint.Gate">Gate:</string>
    <string name="AirportDisplayBoard.Hint.Delayed_Depart">Departure Delayed: </string>
    <string name="AirportDisplayBoard.Hint.IATA_Depart">Departure IATA: </string>
    <string name="AirportDisplayBoard.Hint.IATA_Arrival">Arrival IATA: </string>
    <string name="AirportDisplayBoard.Hint.Airport_Depart">Departure Airport: </string>
    <string name="AirportDisplayBoard.Hint.Airport_Arrival">Arrival Airport: </string>
    <string name="AirportDisplayBoard.Hint.Flight_Number">Flight Number</string>
    <string name="AirportDisplayBoard.Hint.Airline_Name">Airline Name</string>
    <string name="AirportDisplayBoard.Hint.Departure">Departure</string>
    <string name="AirportDisplayBoard.Hint.Arrival">Arrival</string>
    <string name="AirportDisplayBoard.Hint.Last_Searched">Last Searched: </string>
    <string name="AirportDisplayBoard.Hint.Type_Your_KW">Type your keyword here: </string>
    <string name="AirportDisplayBoard.Hint.Select_Airport_First">Please select an Airport first</string>

    <!--    Save and remove favorite feature-->
    <string name="AirportDisplayBoard.Btn.Save_Fav">Save Favorite</string>
    <string name="AirportDisplayBoard.Btn.Remove_Fav">Remove Favorite</string>
    <string name="AirportDisplayBoard.Btn.Remove_Fav_Text">Do you want to delete the favorite: </string>
    <string name="AirportDisplayBoard.Btn.Remove_Fav_Result">You removed favorite flight #</string>

    <!--    Show fav or all flights-->
    <string name="AirportDisplayBoard.Hint.Show_All">Shwoing Favorite Flights</string>
    <string name="AirportDisplayBoard.Hint.Show_Fav">Showing All Flights</string>

    <!-- Exceptions -->
    <string name="AirportDisplayBoard.Exp.Request_Data">Error in requesting data</string>

    <!-- Long Text -->
    <string name="AirportDisplayBoard.TextBlock.Help">
        1. You can search airport by their name, city, or code\n
        2. After airport being selected, you will see the departure flights\"\n
        3. You can click each item of the flight list to see the more detailed information\n
        4. In the detailed information part, \"Save Favorite\" button will save the flight\n
        5. Remove Favorite\" button will remove the flight\n
        6. \"MY LIST\" button will show the flights you\'ve saved
    </string>
    <string name="imageID">Image ID</string>
    <string name="imageName">Image Name</string>
    <string name="imageHeight">Image Height</string>
    <string name="imageWidth">Image Width</string>
    <string name="saveText">Save</string>
    <string name="trivia_score_details_header">Match Details</string>
    <string name="trivia_score_details_player_name_header">Player Name:</string>
    <string name="trivia_score_details_player_name_placeholder" translatable="false">Player Name Goes Here</string>
    <string name="trivia_score_details_score_header">Score:</string>
    <string name="trivia_score_details_score_placeholder" translatable="false">x/x</string>
    <string name="trivia_score_details_category_header">Category:</string>
    <string name="trivia_score_details_difficulty_header">Difficulty:</string>
    <string name="trivia_score_details_category_placeholder" translatable="false">Category Goes Here</string>
    <string name="trivia_score_details_difficulty_placeholder" translatable="false">Difficulty Goes Here</string>
    <string name="trivia_score_details_back_button_text">Back</string>
    <string name="trivia_score_details_delete_button_text">Delete</string>
    <!--AirportDisplayBoardStrings Ends-->

</resources>