<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <TextView
        android:id="@+id/scoreTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/trivia_score_details_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreDetailPlayerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/trivia_score_details_player_name_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTitleView" />

    <TextView
        android:id="@+id/scoreDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trivia_score_details_player_name_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/scoreDetailPlayerNameLabel"
        app:layout_constraintStart_toEndOf="@+id/scoreDetailPlayerNameLabel"
        app:layout_constraintTop_toTopOf="@+id/scoreDetailPlayerNameLabel" />

    <TextView
        android:id="@+id/scoreDetailScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/trivia_score_details_score_header"
        app:layout_constraintEnd_toEndOf="@+id/scoreDetailPlayerNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/scoreDetailPlayerNameLabel" />

    <TextView
        android:id="@+id/scoreDetailScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trivia_score_details_score_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/scoreDetailScoreLabel"
        app:layout_constraintStart_toEndOf="@+id/scoreDetailScoreLabel"
        app:layout_constraintTop_toTopOf="@+id/scoreDetailScoreLabel" />

    <TextView
        android:id="@+id/scoreDetailCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/trivia_score_details_category_header"
        app:layout_constraintEnd_toEndOf="@+id/scoreDetailScoreLabel"
        app:layout_constraintTop_toBottomOf="@+id/scoreDetailScoreLabel" />

    <TextView
        android:id="@+id/scoreDetailDifficultyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/trivia_score_details_difficulty_header"
        app:layout_constraintEnd_toEndOf="@+id/scoreDetailCategoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/scoreDetailCategoryLabel" />

    <TextView
        android:id="@+id/scoreDetailcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trivia_score_details_category_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/scoreDetailCategoryLabel"
        app:layout_constraintStart_toEndOf="@+id/scoreDetailCategoryLabel"
        app:layout_constraintTop_toTopOf="@+id/scoreDetailCategoryLabel" />

    <TextView
        android:id="@+id/scoreDetailDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trivia_score_details_difficulty_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/scoreDetailDifficultyLabel"
        app:layout_constraintStart_toEndOf="@+id/scoreDetailDifficultyLabel"
        app:layout_constraintTop_toTopOf="@+id/scoreDetailDifficultyLabel" />

    <Button
        android:id="@+id/scoreDetailBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/trivia_score_details_back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scoreDetailDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/trivia_score_details_delete_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>